--- a/dev/Northwind.Web/packages.config
+++ b/dev/Northwind.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
@@ -12,26 +13,28 @@
   <package id="EntityFramework.SqlServerCompact" version="6.0.0-rc1" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="KendoUIWeb" version="2013.2.716" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.30506" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0-rc1" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" />
-  <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net45" />
   <package id="Unity.Interception" version="3.0.1304.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
