--- a/dev/Northwind.Web/Views/Web.config
+++ b/dev/Northwind.Web/Views/Web.config
@@ -12,11 +12,13 @@
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
+        <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization"/>
+        <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -31,11 +33,9 @@
     </httpHandlers>
 
     <!--
-        Enabling request validation in view pages would cause validation to occur
-        after the input has already been processed by the controller. By default
-        MVC performs request validation before a controller processes the input.
-        To change this behavior apply the ValidateInputAttribute to a
-        controller or action.
+        Enabling request validation in view pages would cause validation to occur after the input has already been processed by the controller.
+        By default MVC performs request validation before a controller processes the input.
+        To change this behavior apply the ValidateInputAttribute to a controller or action.
     -->
     <pages
         validateRequest="false"
