--- a/dev/Northwind.Web/packages.config
+++ b/dev/Northwind.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-rc1" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.0-rc1" targetFramework="net45" />
+  <package id="EntityFrameworkProfiler" version="2.0.2208.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="KendoUIWeb" version="2013.2.716" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0-rc1" targetFramework="net45" />
@@ -35,6 +36,7 @@
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net45" />
   <package id="Unity.Interception" version="3.0.1304.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
