--- a/dev/packages/repositories.config
+++ b/dev/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Northwind.Data\packages.config" />
+  <repository path="..\Northwind.Repository\packages.config" />
   <repository path="..\Northwind.Web\packages.config" />
   <repository path="..\Repository\packages.config" />
 </repositories>
