--- a/dev/Northwind.Web/Web.config
+++ b/dev/Northwind.Web/Web.config
@@ -4,7 +4,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
 
   <connectionStrings>
     <!--connection string for SQL Server CE-->
@@ -36,15 +36,20 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-  </system.web>
+  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+        </httpModules><httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    
 
     <!-- Enable WebAPI DELETE, PUT - http://blog.codelab.co.nz/2013/04/29/405-method-not-allowed-using-asp-net-web-api/-->
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" />
-    </modules>
+    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
 
     <handlers>
       <!-- Enable WebAPI DELETE, PUT - http://blog.codelab.co.nz/2013/04/29/405-method-not-allowed-using-asp-net-web-api/-->
@@ -58,8 +63,8 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
+  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -127,4 +132,14 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
-</configuration>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
+      <logging level="Trace" />-->
+      
+      <!-- Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
+      <runtimePolicies>
+        <ignoredTypes>
+          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
+        </ignoredTypes>
+      </runtimePolicies>-->
+    </glimpse></configuration>
