--- a/dev/Northwind.Web/packages.config
+++ b/dev/Northwind.Web/packages.config
@@ -12,6 +12,11 @@
   <package id="EntityFramework" version="6.0.0-rc1" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.0-rc1" targetFramework="net45" />
   <package id="EntityFrameworkProfiler" version="2.0.2208.0" targetFramework="net45" />
+  <package id="Glimpse" version="1.6.1" targetFramework="net45" />
+  <package id="Glimpse.Ado" version="1.5.1" targetFramework="net45" />
+  <package id="Glimpse.AspNet" version="1.4.1" targetFramework="net45" />
+  <package id="Glimpse.EF6" version="1.4.0" targetFramework="net45" />
+  <package id="Glimpse.Mvc4" version="1.3.3" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="KendoUIWeb" version="2013.2.716" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0-rc1" targetFramework="net45" />
