--- a/main/Northwind.Service/Northwind.Service.csproj
+++ b/main/Northwind.Service/Northwind.Service.csproj
@@ -47,7 +47,10 @@
     <Compile Include="ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{6E682A14-C872-4813-B620-76E108DEA683}</Project>
+      <Name>Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
