--- a/main/packages/repositories.config
+++ b/main/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Northwind.Data\packages.config" />
   <repository path="..\Northwind.Repository\packages.config" />
+  <repository path="..\Northwind.Test\packages.config" />
   <repository path="..\Northwind.Web\packages.config" />
   <repository path="..\Repository\packages.config" />
 </repositories>
