--- a/main/Northwind.Test/Northwind.Test.csproj
+++ b/main/Northwind.Test/Northwind.Test.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Northwind.Test</RootNamespace>
-    <AssemblyName>Northwind.Test</AssemblyName>
+    <AssemblyName>%3b]%27003.2..........03.0000000000000000000000000000.0.030.  []   000000016.5063302.0</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
