--- a/main/Northwind.Web/packages.config
+++ b/main/Northwind.Web/packages.config
@@ -9,8 +9,8 @@
   <package id="EnterpriseLibrary.SemanticLogging.Database" version="1.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0-rc1" targetFramework="net45" />
-  <package id="EntityFramework.SqlServerCompact" version="6.0.0-rc1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.2" targetFramework="net45" />
   <package id="Glimpse" version="1.6.1" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.5.1" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.4.1" targetFramework="net45" />
