--- a/main/Northwind.Data/Northwind.Data.csproj
+++ b/main/Northwind.Data/Northwind.Data.csproj
@@ -62,36 +62,36 @@
     <Compile Include="Models\CustomerDemographic.cs" />
     <Compile Include="Models\Customer_and_Suppliers_by_City.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\Mapping\AlphabeticalListOfProductMap.cs" />
-    <Compile Include="Models\Mapping\Alphabetical_list_of_productMap.cs" />
-    <Compile Include="Models\Mapping\CategoryMap.cs" />
-    <Compile Include="Models\Mapping\CurrentProductListMap.cs" />
-    <Compile Include="Models\Mapping\Current_Product_ListMap.cs" />
-    <Compile Include="Models\Mapping\CustomerAndSuppliersByCityMap.cs" />
-    <Compile Include="Models\Mapping\CustomerDemographicMap.cs" />
-    <Compile Include="Models\Mapping\CustomerMap.cs" />
-    <Compile Include="Models\Mapping\Customer_and_Suppliers_by_CityMap.cs" />
-    <Compile Include="Models\Mapping\EmployeeMap.cs" />
-    <Compile Include="Models\Mapping\OrderDetailMap.cs" />
-    <Compile Include="Models\Mapping\OrderDetailsExtendedMap.cs" />
-    <Compile Include="Models\Mapping\OrderMap.cs" />
-    <Compile Include="Models\Mapping\OrdersQryMap.cs" />
-    <Compile Include="Models\Mapping\OrderSubtotalMap.cs" />
-    <Compile Include="Models\Mapping\Orders_QryMap.cs" />
-    <Compile Include="Models\Mapping\ProductMap.cs" />
-    <Compile Include="Models\Mapping\ProductsAboveAveragePriceMap.cs" />
-    <Compile Include="Models\Mapping\ProductSalesFor1997Map.cs" />
-    <Compile Include="Models\Mapping\ProductsByCategoryMap.cs" />
-    <Compile Include="Models\Mapping\Products_Above_Average_PriceMap.cs" />
-    <Compile Include="Models\Mapping\Products_by_CategoryMap.cs" />
-    <Compile Include="Models\Mapping\RegionMap.cs" />
-    <Compile Include="Models\Mapping\SalesTotalsByAmountMap.cs" />
-    <Compile Include="Models\Mapping\ShipperMap.cs" />
-    <Compile Include="Models\Mapping\SummaryOfSalesByQuarterMap.cs" />
-    <Compile Include="Models\Mapping\SummaryOfSalesByYearMap.cs" />
-    <Compile Include="Models\Mapping\SupplierMap.cs" />
-    <Compile Include="Models\Mapping\sysdiagramMap.cs" />
-    <Compile Include="Models\Mapping\TerritoryMap.cs" />
+    <Compile Include="Mapping\AlphabeticalListOfProductMap.cs" />
+    <Compile Include="Mapping\Alphabetical_list_of_productMap.cs" />
+    <Compile Include="Mapping\CategoryMap.cs" />
+    <Compile Include="Mapping\CurrentProductListMap.cs" />
+    <Compile Include="Mapping\Current_Product_ListMap.cs" />
+    <Compile Include="Mapping\CustomerAndSuppliersByCityMap.cs" />
+    <Compile Include="Mapping\CustomerDemographicMap.cs" />
+    <Compile Include="Mapping\CustomerMap.cs" />
+    <Compile Include="Mapping\Customer_and_Suppliers_by_CityMap.cs" />
+    <Compile Include="Mapping\EmployeeMap.cs" />
+    <Compile Include="Mapping\OrderDetailMap.cs" />
+    <Compile Include="Mapping\OrderDetailsExtendedMap.cs" />
+    <Compile Include="Mapping\OrderMap.cs" />
+    <Compile Include="Mapping\OrdersQryMap.cs" />
+    <Compile Include="Mapping\OrderSubtotalMap.cs" />
+    <Compile Include="Mapping\Orders_QryMap.cs" />
+    <Compile Include="Mapping\ProductMap.cs" />
+    <Compile Include="Mapping\ProductsAboveAveragePriceMap.cs" />
+    <Compile Include="Mapping\ProductSalesFor1997Map.cs" />
+    <Compile Include="Mapping\ProductsByCategoryMap.cs" />
+    <Compile Include="Mapping\Products_Above_Average_PriceMap.cs" />
+    <Compile Include="Mapping\Products_by_CategoryMap.cs" />
+    <Compile Include="Mapping\RegionMap.cs" />
+    <Compile Include="Mapping\SalesTotalsByAmountMap.cs" />
+    <Compile Include="Mapping\ShipperMap.cs" />
+    <Compile Include="Mapping\SummaryOfSalesByQuarterMap.cs" />
+    <Compile Include="Mapping\SummaryOfSalesByYearMap.cs" />
+    <Compile Include="Mapping\SupplierMap.cs" />
+    <Compile Include="Mapping\sysdiagramMap.cs" />
+    <Compile Include="Mapping\TerritoryMap.cs" />
     <Compile Include="Models\NorthwindContext.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
