--- a/main/packages/repositories.config
+++ b/main/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Frameworks\RepositoryPattern.Ef6\packages.config" />
   <repository path="..\Northwind.Entities\packages.config" />
   <repository path="..\Northwind.Repository\packages.config" />
   <repository path="..\Northwind.Test\packages.config" />
