--- a/main/Frameworks/RepositoryPattern.Ef6/Repository.Pattern.Ef6.csproj
+++ b/main/Frameworks/RepositoryPattern.Ef6/Repository.Pattern.Ef6.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DE5256A9-874F-4BD2-BA49-E2D50C3B9D34}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RepositoryPattern.Ef6</RootNamespace>
-    <AssemblyName>RepositoryPattern.Ef6</AssemblyName>
+    <RootNamespace>Repository.Pattern.Ef6</RootNamespace>
+    <AssemblyName>Repository.Pattern.Ef6</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -80,12 +80,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Repository.Pattern\Repository.Pattern.csproj">
-      <Project>{061A69C6-BD6C-4DD0-8F23-CD996DF1AA51}</Project>
-      <Name>Repository.Pattern</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
