--- a/main/Source/packages/repositories.config
+++ b/main/Source/packages/repositories.config
@@ -1,12 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Frameworks\Repository.Pattern\packages.config" />
-  <repository path="..\Frameworks\RepositoryPattern.Ef6\packages.config" />
-  <repository path="..\Northwind.Entities\packages.config" />
-  <repository path="..\Northwind.Repository\packages.config" />
-  <repository path="..\Northwind.Test\packages.config" />
-  <repository path="..\Northwind.Web\packages.config" />
+  <repository path="..\Repository.Pattern.Ef6\packages.config" />
   <repository path="..\Repository.Pattern\packages.config" />
-  <repository path="..\Repository\packages.config" />
-  <repository path="..\RepositoryPattern.Ef6\packages.config" />
 </repositories>
